# texify

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  main.py  ocr.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.svelte
frontend/src/lib/: Canvas.svelte  Katex.svelte  Spinner.svelte
